Ms.Arch.Hw02/k8s/prometheus_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: monitoring-mk
    namespace: monitoring
    annotations:
        kubernetes.io/ingress.class: nginx
spec:
    rules:
    - host: prom.monitoring.mk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
                service:
                    name: prometheus-kube-prometheus-prometheus
                    port:
                        number: 9090
    - host: graf.monitoring.mk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
                service:
                    name: prometheus-grafana
                    port:
                        number: 80
